MultipleUserTest was updated.