@@ -5,15 +5,18 @@ import java.net.Socket;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
-public class Server {
+public class Server implements AutoCloseable {
 
     private static final int PORT = 1234;
+    private static final int BACKLOG = 1000; // Increased to prevent Connection Refused
 
-    private static final ExecutorService pool = Executors.newCachedThreadPool();
+    // Limits threads to prevent out-of-memory crashes under heavy load
+    private static final ExecutorService pool = Executors.newVirtualThreadPerTaskExecutor();
 
-    static void main() {
+    public static void main() {
+        try(ServerSocket server = new ServerSocket(PORT, BACKLOG)) {
+            System.out.println("Server started on port " + PORT);
 
-        try(ServerSocket server = new ServerSocket(PORT)) {
             while (!server.isClosed()) {
                 Socket socket = server.accept();
                 pool.execute(new ClientHandler(socket));
@@ -23,5 +26,10 @@ public class Server {
         } finally {
             pool.shutdown();
         }
+    }
+
+    @Override
+    public void close() throws Exception {
+        pool.shutdown();
     }
 }
